syntax = "proto3";

import "google/protobuf/empty.proto";

service Calendar {
    rpc AddEvent (Event) returns (google.protobuf.Empty) {
    }
    rpc GetEvent (Id) returns (Event) {
    }
    rpc DelEvent (Id) returns (google.protobuf.Empty) {
    }
    rpc EditEvent (Event) returns (google.protobuf.Empty) {
    }
    rpc GetAllEvents (google.protobuf.Empty) returns (Events) {
    }
}

message Event {
    int32 id = 1;
    int64 startTime = 2;
    int64 endTime = 3;
    reserved 4;
    reserved "duration";
    string title = 5;
    string description = 6;
}

message Events {
    repeated Event events = 1;
}

message Id {
    int32 id = 1;
}